# everest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: main.cc
src/cli/: color.h
src/concurrency/: box.h  conveyor.h
src/containers/: array.h  bankers_queue.h  batched_queue.h  chain.h  checked.h  enumerator.h  list.h  local_option.h  memory.h  option.h  shared.h  shared_ptr.h  validation.h
src/containers/array/: containable.h  container.h  eq.h  foldable.h  functor.h  hashable.h  monoid.h  ord.h  semigroup.h  shows.h  zero.h
src/containers/enumerators/: array_enumerator.h  list_enumerator.h  option_enumerator.h
src/containers/list/: containable.h  container.h  eq.h  foldable.h  functor.h  monoid.h  ord.h  semigroup.h  shows.h  zero.h
src/containers/local_array/: containable.h  container.h  eq.h  foldable.h  functor.h  hashable.h  monoid.h  ord.h  semigroup.h  shows.h  zero.h
src/containers/local_option/: alternative.h  containable.h  container.h  eq.h  filterable.h  foldable.h  functor.h  hashable.h  monad.h  monad_plus.h  monoid.h  ord.h  semigroup.h  shows.h  unwrappable.h  zero.h
src/containers/monoid/: monoid_average.h  monoid_max.h  monoid_min.h
src/containers/monoids/: max.h  min.h
src/containers/mutable/: mutable_map.h  mutable_vector.h
src/containers/option/: alternative.h  containable.h  container.h  enumerable.h  eq.h  filterable.h  foldable.h  functor.h  hashable.h  monad.h  monad_plus.h  monoid.h  ord.h  semigroup.h  shows.h  unwrappable.h  zero.h
src/containers/shared_array/: containable.h  container.h  eq.h  foldable.h  functor.h  hashable.h  monoid.h  ord.h  semigroup.h  shows.h  zero.h
src/containers/shared_option/: alternative.h  containable.h  container.h  enumerable.h  eq.h  filterable.h  foldable.h  functor.h  hashable.h  monad.h  monad_plus.h  monoid.h  ord.h  semigroup.h  shows.h  unwrappable.h  zero.h
src/containers_old/: identity.h  validation.h
src/containers_old/monoids/: max.h  min.h
src/core/: #tagged_union.h#  .#tagged_union.h  tagged_union.h
src/everest/causality/: actor_time.h  lamport_time.h  vector_time.h
src/everest/cli/: color.h
src/everest/concurrency/: box.h  channel.h  channel_result.h  channel_state.h  conveyor.h  mutex.h  thread.h
src/everest/concurrency/mutex/: mutex_lock.h
src/everest/containers/: array.h  checked.h  list.h  map.h  memory.h  option.h  set.h  shared.h  sorted_vector_map.h  sorted_vector_set.h  vector.h  virtual_option.h
src/everest/deciders/: binary_decider.h  multi_variant_decider.h
src/everest/exceptions/: no_such_element_exception.h
src/everest/flags/: binary_feature_flag.h  multi_variant_feature_flag.h
src/everest/functions/: identity.h  types.h
src/everest/io/: event_loop.h  file.h  memory_mapped_file.h  process.h  tcp_client_socket.h  tcp_server_socket.h
src/everest/memory/: growable_memory.h  memory.h  mutable_memory.h  shared.h  unique.h
src/everest/meta/: deepest_arg.h  last_arg.h  max.h  min.h  nth_arg.h  nth_type_arg.h
src/everest/monoids/: average_monoid.h  max_monoid.h  min_monoid.h
src/everest/mutable_containers/: circular_buffer.h  mutable_array.h  mutable_bit_set.h  mutable_circular_buffer.h  mutable_map.h  mutable_set.h  mutable_sorted_vector_map.h  mutable_sorted_vector_set.h  mutable_tuple.h  mutable_vector.h
src/everest/probabilistic/: bloom_filter.h  mutable_bloom_filter.h
src/everest/process/: io.h
src/everest/strings/: boxed_string.h  mutable_string.h  string.h  string_concat.h  string_joiner.h  string_slice.h
src/everest/test/: bdd.h
src/everest/types/: bool.h  int16.h  int32.h  int64.h  int8.h  size.h  string.h  uint16.h  uint32.h  uint64.h  uint8.h
src/exceptions/: no_such_element_exception.h
src/functions/: identity.h  types.h
src/meta/: deepest_arg.h  last_arg.h  max.h  min.h  nth_arg.h
src/process/: io.h
src/test/: bdd.h
src/traitorous_specs/concurrency/: box_spec.h
src/traitorous_specs/containers/: array_spec.h  checked_spec.h  list_spec.h  local_array_spec.h  local_checked_spec.h  local_option_spec.h  option_spec.h  shared_array_spec.h  shared_checked_spec.h  shared_option_spec.h  validation_spec.h
src/traitorous_specs/types/: bool_spec.h  int16_spec.h  int32_spec.h  int64_spec.h  int8_spec.h  string_spec.h  uint16_spec.h  uint32_spec.h  uint8_spec.h
src/traits/: add.h  alternative.h  applicative.h  bit_and.h  bit_or.h  bit_xor.h  bounded.h  catamorphism.h  containable.h  container.h  disjoinable.h  divide.h  droppable.h  eq.h  filterable.h  foldable.h  functor.h  hashable.h  intersectable.h  map.h  monad.h  monad_plus.h  monoid.h  multiply.h  negate.h  one.h  ord.h  orderable.h  remainder.h  semigroup.h  set.h  shift_left.h  shift_right.h  show.h  subtract.h  takeable.h  traversable.h  unwrappable.h  zero.h
src/traits/lawful/: alternative.h  foldable.h  functor.h  monad.h  monad_plus.h  monoid.h  semigroup.h
src/traits/unlawful/: bit_and.h  bit_or.h  bit_xor.h  bounded.h  containable.h  container.h  disjoinable.h  divide.h  droppable.h  enumerable.h  enumerator.h  eq.h  filterable.h  hashable.h  intersectable.h  multiply.h  negate.h  one.h  ord.h  queue.h  remainder.h  show.h  stack.h  subtract.h  takeable.h  traversable.h  unwrappable.h  zero.h
src/types/: _basic_num.h  any.h  bool.h  int.h  int16.h  int32.h  int64.h  int8.h  size.h  string.h  uint.h  uint16.h  uint32.h  uint64.h  uint8.h
tests/: main.cc
tests/everest/concurrency/: box_spec.h
tests/everest/containers/: array_spec.h  checked_spec.h  list_spec.h  option_spec.h  set_spec.h.h  shared_option_spec.h  vector_spec.h
tests/everest/io/: file_spec.h  tcp_client_server_spec.h  tcp_client_socket_spec.h
tests/everest/mutable_containers/: mutable_array_spec.h  mutable_bit_set_spec.h  mutable_circular_buffer_spec.h  mutable_map_spec.h  mutable_set_spec.h  mutable_sorted_vector_map_spec.h  mutable_sorted_vector_set_spec.h  mutable_vector_spec.h
tests/everest/types/: bool_spec.h  int16_spec.h  int32_spec.h  int64_spec.h  int8_spec.h  string_spec.h  uint16_spec.h  uint32_spec.h  uint64_spec.h  uint8_spec.h
(+1075 files in other folders)
