cmake_minimum_required(VERSION 3.2)
project(traitorous_og)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror -Wno-unused-parameter -Wno-return-type -Wno-unknown-pragmas -ftemplate-backtrace-limit=0")

include_directories(src)

set(SOURCE_FILES
        src/cli/color.h
        src/test/bdd.h
        src/meta/max.h
        src/meta/min.h
        src/meta/nth_arg.h
        src/traits/lawful/alternative.h
        src/traits/unlawful/bit_and.h
        src/traits/unlawful/bit_or.h
        src/traits/unlawful/bit_xor.h
        src/traits/unlawful/bounded.h
        src/traits/unlawful/containable.h
        src/traits/unlawful/container.h
        src/traits/unlawful/disjoinable.h
        src/traits/unlawful/divide.h
        src/traits/unlawful/droppable.h
        src/traits/unlawful/eq.h
        src/traits/unlawful/filterable.h
        src/traits/lawful/foldable.h
        src/traits/lawful/functor.h
        src/traits/unlawful/hashable.h
        src/traits/unlawful/intersectable.h
        src/traits/lawful/monad.h
        src/traits/lawful/monad_plus.h
        src/traits/lawful/monoid.h
        src/traits/unlawful/multiply.h
        src/traits/unlawful/negate.h
        src/traits/unlawful/one.h
        src/traits/unlawful/ord.h
        src/traits/unlawful/remainder.h
        src/traits/lawful/semigroup.h
        src/traits/unlawful/shift_left.h
        src/traits/unlawful/shift_right.h
        src/traits/unlawful/show.h
        src/traits/unlawful/subtract.h
        src/traits/unlawful/takeable.h
        src/traits/unlawful/unwrappable.h
        src/traits/unlawful/zero.h
        src/types/bool.h
        src/types/int16.h
        src/types/int32.h
        src/types/int64.h
        src/types/int8.h
        src/types/string.h
        src/types/uint16.h
        src/types/uint32.h
        src/types/uint64.h
        src/types/uint8.h
        src/main.cc
        src/containers/local_option/hashable.h
        src/containers/local_option/zero.h
        src/containers/local_option/semigroup.h
        src/containers/local_option/monoid.h
        src/containers/local_option/filterable.h
        src/containers/local_option/ord.h
        src/containers/local_option/monad_plus.h
        src/containers/local_option/unwrappable.h
        src/containers/local_option/shows.h
        src/containers/shared.h
        src/containers/option.h
        src/containers/option/containable.h
        src/containers/option/container.h
        src/containers/option/alternative.h
        src/containers/option/eq.h
        src/containers/option/foldable.h
        src/containers/option/functor.h
        src/containers/option/hashable.h
        src/containers/option/monad.h
        src/containers/option/semigroup.h
        src/traitorous_specs/containers/option_spec.h
        src/containers/enumerator.h
        src/containers/option/zero.h
        src/containers/option/monoid.h
        src/containers/option/filterable.h
        src/containers/option/ord.h
        src/containers/option/monad_plus.h
        src/containers/option/unwrappable.h
        src/containers/option/shows.h
        src/containers/array.h
        src/containers/nel_list.h
        src/traitorous_specs/containers/array_spec.h src/traitorous_specs/containers/local_array_spec.h src/containers/local_array/shows.h src/containers/local_array/eq.h src/containers/local_array/ord.h src/containers/local_array/functor.h src/containers/local_array/containable.h src/containers/local_array/container.h src/containers/local_array/semigroup.h src/containers/local_array/zero.h src/containers/local_array/monoid.h src/containers/local_array/hashable.h src/containers/array/shows.h src/containers/array/eq.h src/containers/array/ord.h src/containers/array/functor.h src/containers/array/containable.h src/containers/array/container.h src/containers/array/semigroup.h src/containers/array/zero.h src/containers/array/monoid.h src/containers/array/hashable.h src/containers/list.h)

add_executable(traitorous_og
        ${SOURCE_FILES}
        src/traitorous_specs/types/bool_spec.h
        src/traitorous_specs/types/int8_spec.h
        src/traitorous_specs/types/int16_spec.h
        src/traitorous_specs/types/int32_spec.h
        src/traitorous_specs/types/int64_spec.h
        src/traitorous_specs/types/uint8_spec.h
        src/traitorous_specs/types/uint16_spec.h
        src/traitorous_specs/types/uint32_spec.h
        src/traitorous_specs/types/string_spec.h
        src/containers/local_option.h
        src/traitorous_specs/containers/local_option_spec.h
        src/traitorous_specs/containers/local_nel_list_spec.h
        src/traitorous_specs/containers/list_spec.h
        src/functions/identity.h
        src/functions/types.h
        src/meta/last_arg.h
        src/meta/deepest_arg.h
        src/containers/local_option/alternative.h
        src/containers/local_option/containable.h
        src/containers/local_option/container.h
        src/containers/local_option/foldable.h
        src/containers/local_option/functor.h
        src/containers/local_option/eq.h
        src/containers/local_option/monad.h)
