cmake_minimum_required(VERSION 3.2)
project(traitorous_og)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror -Wno-unused-parameter -Wno-return-type -Wno-unknown-pragmas -ftemplate-backtrace-limit=0")

include_directories(src)

set(SOURCE_FILES
        src/cli/color.h
        src/test/bdd.h
        src/meta/max.h
        src/meta/min.h
        src/meta/nth_arg.h
        src/traits/lawful/alternative.h
        src/traits/unlawful/bit_and.h
        src/traits/unlawful/bit_or.h
        src/traits/unlawful/bit_xor.h
        src/traits/unlawful/bounded.h
        src/traits/unlawful/containable.h
        src/traits/unlawful/container.h
        src/traits/unlawful/disjoinable.h
        src/traits/unlawful/divide.h
        src/traits/unlawful/droppable.h
        src/traits/unlawful/eq.h
        src/traits/unlawful/filterable.h
        src/traits/lawful/foldable.h
        src/traits/lawful/functor.h
        src/traits/unlawful/hashable.h
        src/traits/unlawful/intersectable.h
        src/traits/lawful/monad.h
        src/traits/lawful/monad_plus.h
        src/traits/lawful/monoid.h
        src/traits/unlawful/multiply.h
        src/traits/unlawful/negate.h
        src/traits/unlawful/one.h
        src/traits/unlawful/ord.h
        src/traits/unlawful/remainder.h
        src/traits/lawful/semigroup.h
        src/traits/unlawful/shift_left.h
        src/traits/unlawful/shift_right.h
        src/traits/unlawful/show.h
        src/traits/unlawful/subtract.h
        src/traits/unlawful/takeable.h
        src/traits/unlawful/unwrappable.h
        src/traits/unlawful/zero.h
        src/types/bool.h
        src/types/int16.h
        src/types/int32.h
        src/types/int64.h
        src/types/int8.h
        src/types/string.h
        src/types/uint16.h
        src/types/uint32.h
        src/types/uint64.h
        src/types/uint8.h
        src/main.cc
        src/containers/option/hashable.h
        src/containers/option/zero.h
        src/containers/option/semigroup.h
        src/containers/option/monoid.h
        src/containers/option/filterable.h
        src/containers/option/ord.h
        src/containers/option/monad_plus.h
        src/containers/option/unwrappable.h
        src/containers/option/shows.h
        src/containers/shared.h
        src/containers/option.h
        src/containers/shared_option/containable.h
        src/containers/shared_option/container.h
        src/containers/shared_option/alternative.h
        src/containers/shared_option/eq.h
        src/containers/shared_option/foldable.h
        src/containers/shared_option/functor.h
        src/containers/shared_option/hashable.h
        src/containers/shared_option/monad.h
        src/containers/shared_option/semigroup.h
        src/traitorous_specs/containers/shared_option_spec.h
        src/containers/shared_option/zero.h
        src/containers/shared_option/monoid.h
        src/containers/shared_option/filterable.h
        src/containers/shared_option/ord.h
        src/containers/shared_option/monad_plus.h
        src/containers/shared_option/unwrappable.h
        src/containers/shared_option/shows.h
        src/containers/array.h
        src/traitorous_specs/containers/checked_spec.h
        src/traitorous_specs/containers/shared_checked_spec.h
        src/traitorous_specs/containers/shared_array_spec.h
        src/traitorous_specs/containers/array_spec.h
        src/containers/array/shows.h
        src/containers/array/eq.h
        src/containers/array/ord.h
        src/containers/array/functor.h
        src/containers/array/containable.h
        src/containers/array/container.h
        src/containers/array/semigroup.h
        src/containers/array/zero.h
        src/containers/array/monoid.h
        src/containers/array/hashable.h
        src/containers/shared_array/shows.h
        src/containers/shared_array/eq.h
        src/containers/shared_array/ord.h
        src/containers/shared_array/functor.h
        src/containers/shared_array/containable.h
        src/containers/shared_array/container.h
        src/containers/shared_array/semigroup.h
        src/containers/shared_array/zero.h
        src/containers/shared_array/monoid.h
        src/containers/shared_array/hashable.h
        src/containers/enumerators/option_enumerator.h
        src/containers/enumerators/array_enumerator.h
        src/containers/enumerators/list_enumerator.h
        src/exceptions/no_such_element_exception.h
        src/traits/unlawful/enumerable.h
        src/containers/shared_option/enumerable.h
        src/traits/unlawful/enumerator.h
        src/traits/unlawful/queue.h
        src/traits/unlawful/stack.h
        src/containers/list/shows.h
        src/containers/list/ord.h
        src/containers/list/eq.h
        src/containers/list/functor.h
        src/containers/list/containable.h
        src/containers/list/container.h
        src/containers/list/semigroup.h
        src/containers/list/zero.h
        src/containers/list/monoid.h
        src/containers/list/foldable.h
        src/containers/array/foldable.h
        src/containers/shared_array/foldable.h
        src/containers/checked.h
        src/concurrency/conveyor.h
        src/concurrency/box.h
        src/traitorous_specs/concurrency/box_spec.h
        src/containers/memory.h
        src/types/size.h
        src/containers/mutable/mutable_map.h
        src/containers/mutable/mutable_vector.h)

add_executable(traitorous_og
        ${SOURCE_FILES}
        src/traitorous_specs/types/bool_spec.h
        src/traitorous_specs/types/int8_spec.h
        src/traitorous_specs/types/int16_spec.h
        src/traitorous_specs/types/int32_spec.h
        src/traitorous_specs/types/int64_spec.h
        src/traitorous_specs/types/uint8_spec.h
        src/traitorous_specs/types/uint16_spec.h
        src/traitorous_specs/types/uint32_spec.h
        src/traitorous_specs/types/string_spec.h
        src/traitorous_specs/containers/option_spec.h
        src/functions/identity.h
        src/functions/types.h
        src/meta/last_arg.h
        src/meta/deepest_arg.h
        src/containers/option/alternative.h
        src/containers/option/containable.h
        src/containers/option/container.h
        src/containers/option/foldable.h
        src/containers/option/functor.h
        src/containers/option/eq.h
        src/containers/option/monad.h)
