cmake_minimum_required(VERSION 3.2)
project(traitorous_og)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror -Wno-unused-parameter -Wno-return-type -Wno-unknown-pragmas -ftemplate-backtrace-limit=0")

include_directories(src)

set(SOURCE_FILES
        src/everest/cli/color.h
        src/everest/test/bdd.h
        src/everest/meta/max.h
        src/everest/meta/min.h
        src/everest/meta/nth_arg.h
        src/everest/traits/lawful/alternative.h
        src/everest/traits/unlawful/bit_and.h
        src/everest/traits/unlawful/bit_or.h
        src/everest/traits/unlawful/bit_xor.h
        src/everest/traits/unlawful/bounded.h
        src/everest/traits/unlawful/containable.h
        src/everest/traits/unlawful/container.h
        src/everest/traits/unlawful/disjoinable.h
        src/everest/traits/unlawful/divide.h
        src/everest/traits/unlawful/droppable.h
        src/everest/traits/unlawful/eq.h
        src/everest/traits/unlawful/filterable.h
        src/everest/traits/lawful/foldable.h
        src/everest/traits/lawful/functor.h
        src/everest/traits/unlawful/hashable.h
        src/everest/traits/unlawful/intersectable.h
        src/everest/traits/lawful/monad.h
        src/everest/traits/lawful/monad_plus.h
        src/everest/traits/lawful/monoid.h
        src/everest/traits/unlawful/multiply.h
        src/everest/traits/unlawful/negate.h
        src/everest/traits/unlawful/one.h
        src/everest/traits/unlawful/ord.h
        src/everest/traits/unlawful/remainder.h
        src/everest/traits/lawful/semigroup.h
        src/everest/traits/unlawful/shift_left.h
        src/everest/traits/unlawful/shift_right.h
        src/everest/traits/unlawful/show.h
        src/everest/traits/unlawful/subtract.h
        src/everest/traits/unlawful/takeable.h
        src/everest/traits/unlawful/unwrappable.h
        src/everest/traits/unlawful/zero.h
        src/everest/traits/unlawful/hexable.h
        src/everest/types/bool.h
        src/everest/types/int16.h
        src/everest/types/int32.h
        src/everest/types/int64.h
        src/everest/types/int8.h
        src/everest/types/string.h
        src/everest/types/uint16.h
        src/everest/types/uint32.h
        src/everest/types/uint64.h
        src/everest/types/uint8.h
        src/main.cc
        src/everest/containers/option/traits/hashable.h
        src/everest/containers/option/traits/zero.h
        src/everest/containers/option/traits/semigroup.h
        src/everest/containers/option/traits/monoid.h
        src/everest/containers/option/traits/filterable.h
        src/everest/containers/option/traits/ord.h
        src/everest/containers/option/traits/monad_plus.h
        src/everest/containers/option/traits/unwrappable.h
        src/everest/containers/option/traits/shows.h
        src/everest/containers/shared.h
        src/everest/containers/option.h
        src/everest/containers/option/traits/shared/containable.h
        src/everest/containers/option/traits/shared/container.h
        src/everest/containers/option/traits/shared/alternative.h
        src/everest/containers/option/traits/shared/eq.h
        src/everest/containers/option/traits/shared/foldable.h
        src/everest/containers/option/traits/shared/functor.h
        src/everest/containers/option/traits/shared/hashable.h
        src/everest/containers/option/traits/shared/monad.h
        src/everest/containers/option/traits/shared/semigroup.h
        src/everest/specs/containers/shared_option_spec.h
        src/everest/containers/option/traits/shared/zero.h
        src/everest/containers/option/traits/shared/monoid.h
        src/everest/containers/option/traits/shared/filterable.h
        src/everest/containers/option/traits/shared/ord.h
        src/everest/containers/option/traits/shared/monad_plus.h
        src/everest/containers/option/traits/shared/unwrappable.h
        src/everest/containers/option/traits/shared/shows.h
        src/everest/containers/mutable/mutable_array.h
        src/everest/specs/containers/checked_spec.h
        src/everest/specs/containers/shared_checked_spec.h
        src/everest/specs/containers/mutable/mutable_shared_array_spec.h
        src/everest/specs/containers/mutable/mutable_array_spec.h
        src/everest/containers/mutable/mutable_array.h
        src/everest/containers/mutable/array/traits/shows.h
        src/everest/containers/mutable/array/traits/eq.h
        src/everest/containers/mutable/array/traits/ord.h
        src/everest/containers/mutable/array/traits/functor.h
        src/everest/containers/mutable/array/traits/containable.h
        src/everest/containers/mutable/array/traits/container.h
        src/everest/containers/mutable/array/traits/semigroup.h
        src/everest/containers/mutable/array/traits/zero.h
        src/everest/containers/mutable/array/traits/monoid.h
        src/everest/containers/mutable/array/traits/hashable.h
        src/everest/containers/mutable/array/traits/shared/shows.h
        src/everest/containers/mutable/array/traits/shared/eq.h
        src/everest/containers/mutable/array/traits/shared/ord.h
        src/everest/containers/mutable/array/traits/shared/functor.h
        src/everest/containers/mutable/array/traits/shared/containable.h
        src/everest/containers/mutable/array/traits/shared/container.h
        src/everest/containers/mutable/array/traits/shared/semigroup.h
        src/everest/containers/mutable/array/traits/shared/zero.h
        src/everest/containers/mutable/array/traits/shared/monoid.h
        src/everest/containers/mutable/array/traits/shared/hashable.h
        src/everest/containers/array.h
        src/everest/specs/containers/shared_array_spec.h
        src/everest/specs/containers/array_spec.h
        src/everest/containers/array/traits/shows.h
        src/everest/containers/array/traits/eq.h
        src/everest/containers/array/traits/ord.h
        src/everest/containers/array/traits/functor.h
        src/everest/containers/array/traits/foldable.h
        src/everest/containers/array/traits/containable.h
        src/everest/containers/array/traits/container.h
        src/everest/containers/array/traits/semigroup.h
        src/everest/containers/array/traits/zero.h
        src/everest/containers/array/traits/monoid.h
        src/everest/containers/array/traits/hashable.h
        src/everest/containers/array/traits/shared/shows.h
        src/everest/containers/array/traits/shared/eq.h
        src/everest/containers/array/traits/shared/ord.h
        src/everest/containers/array/traits/shared/functor.h
        src/everest/containers/array/traits/shared/foldable.h
        src/everest/containers/array/traits/shared/containable.h
        src/everest/containers/array/traits/shared/container.h
        src/everest/containers/array/traits/shared/semigroup.h
        src/everest/containers/array/traits/shared/zero.h
        src/everest/containers/array/traits/shared/monoid.h
        src/everest/containers/array/traits/shared/hashable.h
        src/everest/containers/enumerators/option_enumerator.h
        src/everest/containers/enumerators/array_enumerator.h
        src/everest/containers/enumerators/list_enumerator.h
        src/everest/exceptions/no_such_element_exception.h
        src/everest/traits/unlawful/enumerable.h
        src/everest/containers/option/traits/shared/enumerable.h
        src/everest/traits/unlawful/enumerator.h
        src/everest/traits/unlawful/queue.h
        src/everest/traits/unlawful/stack.h
        src/everest/containers/list/traits/shows.h
        src/everest/containers/list/traits/ord.h
        src/everest/containers/list/traits/eq.h
        src/everest/containers/list/traits/functor.h
        src/everest/containers/list/traits/containable.h
        src/everest/containers/list/traits/container.h
        src/everest/containers/list/traits/semigroup.h
        src/everest/containers/list/traits/zero.h
        src/everest/containers/list/traits/monoid.h
        src/everest/containers/list/traits/foldable.h
        src/everest/containers/mutable/array/traits/foldable.h
        src/everest/containers/mutable/array/traits/shared/foldable.h
        src/everest/containers/checked.h
        src/everest/concurrency/conveyor.h
        src/everest/concurrency/box.h
        src/everest/specs/concurrency/box_spec.h
        src/everest/containers/mutable/mutable_memory.h
        src/everest/types/size.h
        src/everest/containers/mutable/mutable_map.h
        src/everest/containers/mutable/mutable_vector.h
        src/everest/containers/list.h
        src/everest/specs/containers/list_spec.h
        src/everest/process/io.h
        src/everest/containers/crdt/counters/gcounter.h
        src/everest/containers/crdt/counters/pncounter.h
        src/everest/containers/monoids/max_monoid.h
        src/everest/containers/monoids/min_monoid.h
        src/everest/specs/types/uint64_spec.h
        src/everest/containers/option/option_type.h
        src/everest/containers/list/list_node.h
        src/everest/containers/checked/checked_type.h
        src/everest/containers/checked/traits/shows.h
        src/everest/containers/checked/traits/eq.h
        src/everest/containers/checked/traits/ord.h
        src/everest/containers/checked/traits/containable.h
        src/everest/containers/checked/traits/container.h
        src/everest/containers/checked/traits/functor.h
        src/everest/containers/checked/traits/alternative.h
        src/everest/containers/checked/traits/monad.h
        src/everest/containers/checked/traits/semigroup.h
        src/everest/containers/checked/traits/zero.h
        src/everest/containers/checked/traits/monoid.h
        src/everest/containers/checked/traits/hashable.h
        src/everest/containers/checked/traits/foldable.h
        src/everest/containers/checked/traits/unwrappable.h
        src/everest/containers/checked/traits/shared/shows.h
        src/everest/containers/checked/traits/shared/ord.h
        src/everest/containers/checked/traits/shared/eq.h
        src/everest/containers/checked/traits/shared/containable.h
        src/everest/containers/checked/traits/shared/container.h
        src/everest/containers/checked/traits/shared/functor.h
        src/everest/containers/checked/traits/shared/alternative.h
        src/everest/containers/checked/traits/shared/monad.h
        src/everest/containers/checked/traits/shared/semigroup.h
        src/everest/containers/checked/traits/shared/zero.h
        src/everest/containers/checked/traits/shared/monoid.h
        src/everest/containers/checked/traits/shared/hashable.h
        src/everest/containers/checked/traits/shared/foldable.h
        src/everest/containers/checked/traits/shared/unwrappable.h
        src/everest/containers/monoids/max/traits/shows.h
        src/everest/containers/monoids/max/traits/eq.h
        src/everest/containers/monoids/max/traits/ord.h
        src/everest/containers/monoids/max/traits/zero.h
        src/everest/containers/monoids/max/traits/semigroup.h
        src/everest/containers/monoids/max/traits/monoid.h
        src/everest/containers/monoids/min/traits/shows.h
        src/everest/containers/monoids/min/traits/eq.h
        src/everest/containers/monoids/min/traits/ord.h
        src/everest/containers/monoids/min/traits/zero.h
        src/everest/containers/monoids/min/traits/semigroup.h
        src/everest/containers/monoids/min/traits/monoid.h
        src/everest/containers/memory.h
        src/everest/containers/array.h src/everest/containers/vector.h src/everest/containers/shared/shared_container.h)

add_executable(traitorous_og
        ${SOURCE_FILES}
        src/everest/specs/types/bool_spec.h
        src/everest/specs/types/int8_spec.h
        src/everest/specs/types/int16_spec.h
        src/everest/specs/types/int32_spec.h
        src/everest/specs/types/int64_spec.h
        src/everest/specs/types/uint8_spec.h
        src/everest/specs/types/uint16_spec.h
        src/everest/specs/types/uint32_spec.h
        src/everest/specs/types/string_spec.h
        src/everest/specs/containers/option_spec.h
        src/everest/functions/identity.h
        src/everest/functions/types.h
        src/everest/meta/last_arg.h
        src/everest/meta/deepest_arg.h
        src/everest/containers/option/traits/alternative.h
        src/everest/containers/option/traits/containable.h
        src/everest/containers/option/traits/container.h
        src/everest/containers/option/traits/foldable.h
        src/everest/containers/option/traits/functor.h
        src/everest/containers/option/traits/eq.h
        src/everest/containers/option/traits/monad.h)
